--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^10.3.1",
+    "next-purgecss": "^4.0.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
   }
