--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "next": "^11.0.1",
+    "next": "^11.1.0",
+    "postcss-import": "^14.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
-    "next-purgecss": "^4.0.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
   }
